# mp3gain

./: README.md
VBGUI/: American.mp3gain.ini  Get Directory Dialog.bas  HandleError.bas  MP3GAIN.RES  MP3Gain.vbp  Mp3Info.cls  basCommDialog.bas  basCommandOutput.bas  basGetDecimal.bas  basGetListItem.bas  basListViewSort.bas  basLocalizer.bas  basSaveAnalysis.bas  basSysTray.bas  frmAbout.frm  frmAbout.frx  frmDisclaimer.frm  frmDisclaimer.frx  frmDonate.frm  frmDonate.frx  frmGetGain.frm  frmLayerCheckWarning.frm  frmLayerCheckWarning.frx  frmLogs.frm  frmMain.frm  frmMain.frx  frmMaximizing.frm  frmMaximizing.frx  frmOptions.frm  frmOptions.frx  frmReadOnly.frm  frmResetWarn.frm  frmSkipTagsWarn.frm  frmSkipTagsWarn.frx  frmStereoWarning.frm  frmStereoWarning.frx  frmSysTray.frm
VBGUI/Help/: Analysis_menu.htm  Concepts.htm  (+21 more)
aacgain/: MP4MetaFile.cpp  MP4MetaFile.h  Makefile.am  README  aacgain.cpp  aacgain.dsp  aacgain.dsw  aacgain.h  aacgain.rc  aacgain.sln  aacgain.vcproj  aacgainf.h  aacgaini.h  decoder.c  mp3gain.vcproj  syntax.c
aacgain/linux/: README.linux
installer/: mp3gain.nsi
mp3gain/: Makefile  VerInfo.rc  apetag.c  apetag.h  gain_analysis.c  id3tag.c  mp3gain.c  mp3gain.dsp  mp3gain.h  mp3gain.sln  mp3gain.vcproj  rg_error.c  rg_error.h
mp3gainwx/: MainFrame.wxg  Makefile  mainFrame.cpp  mainFrame.h  mainFrame.py  mp3Info.cpp  mp3Info.h  mp3Info.py  mp3gain.cpp  mp3gain.rc  mp3gainwx.dsp  mp3gainwx.dsw
website/: .htaccess  download.php  end.php  faq.php  index.php  mp3gainstyle.css  news.php  pagebase.php  start.php  thanks.php  translation.php
(+59 files in other folders)
